# cuBoolGraph

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: clang-format.yml  self-hosted.yml  ubuntu.yml
include/: regular_path_query.hpp
src/: CMakeLists.txt  regular_path_query.cpp
tests/: CMakeLists.txt  rpq_tests.cpp
